deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vending-machine
  labels:
    app: vending-machine
